# yes_chef_mcp

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
backend/: CLAUDE.md  pyproject.toml
server/: CLAUDE.md  pyproject.toml
server/mealmcp/: __init__.py  app.py
server/mealmcp/api/: routes.py  views.py
server/mealmcp/core/: CLAUDE.md  constraint_relaxer.py  db.py  grocery.py  meal_composer.py  models.py  optimizer.py  planner.py  recipe_store.py  schemas.py  search.py  spoilage.py
server/mealmcp/mcp/: server.py
server/mealmcp/pipeline/: CLAUDE.md  embeddings.py  nutrition.py
server/mealmcp/pipeline/providers/: anylist.py  csv_import.py  mealie.py
server/mealmcp/views/: CLAUDE.md  __init__.py  grocery-list.html  macro-setter.html  package-lock.json  package.json  recipe-selector.html  shared.js  vite.config.ts  weekly-calendar.html
server/mealmcp/views/src/: bridge.ts  global.css  theme.ts
server/tests/: conftest.py  test_anylist_provider.py  test_grocery.py  test_meal_composer.py  test_planner.py  test_recipe_store.py  test_search.py  test_spoilage.py
server/yes_chef_mcp/: __init__.py  app.py
server/yes_chef_mcp/api/: routes.py  views.py
server/yes_chef_mcp/core/: grocery.py  meal_composer.py  planner.py  recipe_store.py  spoilage.py
server/yes_chef_mcp/mcp/: server.py
server/yes_chef_mcp/pipeline/: nutrition.py
server/yes_chef_mcp/pipeline/providers/: csv_import.py  mealie.py
server/yes_chef_mcp/views/: CLAUDE.md  grocery-list.html  package.json  recipe-selector.html
server/yes_chef_mcp/views/src/: bridge.ts  types.ts
(+95 files in other folders)
